<resources>
    <string name="app_name">Blah</string>

    <string name="title_activity_login">Join</string>

    <!-- Strings related to login -->
    <string name="prompt_account">Please input your phone number</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="ime_sign_in">Join</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_account_format">Please input correct account</string>

    <!--Registration strings-->
    <string name="reg_photo_album">From Album</string>
    <string name="reg_photo_camera">From Camera</string>
    <string name="reg_photo_info">We start over until everything we touch enhances each life.</string>
    <string name="prompt_name">Your name</string>
    <string name="ime_sign_up">OK</string>

    <!--Toolbar strings related to main-->
    <string name="action_quit">Quit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Navigation Menu-->
    <string name="header_author_name">Steve ZHANG</string>
    <string name="header_author_email">stevzhg@gmail.com</string>
    <string name="nav_home">Blah</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_random">Random</string>
    <string name="image_des">Image</string>

    <!--Dialog strings-->
    <string name="dialog_delete_chat_title">Delete this chat</string>
    <string name="dialog_delete_chat_content">This chat will be permanently deleted！</string>

    <!--Friends Detail-->
    <string name="friends_detail_phone">Phone</string>
    <string name="friends_detail_info">Info</string>

    <string name="welcome_to_here">More inspirations are coming soon!</string>
</resources>
